# neutralb1

./: .code-workspace  .gitignore  .rootlogon.C  .rootrc  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  build_with_env.sh  environment.yml  neutralb1.code-workspace  pyproject.toml  setup_gluex.csh  setup_gluex.sh  vec_ps_moment.cfg  version.xml  write_scale_file.py
.github/instructions/: copilot_instructions.instructions.md
analysis/: README.md  fitsToCsv.C  get_bin_data.C  plot_prod_angle.C
analysis/cross_section/: plot_theory.py
analysis/input-output-tests/0m_1m_1p/: README.md
analysis/input-output-tests/0m_1m_1p/mcaccept_noaccidental/no_ppi0_cut/: analysis.ipynb
analysis/input-output-tests/detector_effects/: detector_effects.ipynb
analysis/input-output-tests/moment-projection/: moment_projection.ipynb
analysis/input-output-tests/moment-verification/: amplitudes.cfg  moments.cfg  run.sh  verify_moment.ipynb
analysis/notebooks/: .gitattributes  compare_ds_constraint.ipynb  compare_orientations.ipynb  compare_ppi0-cut.ipynb  mass-dependent_plot.ipynb
analysis/other_notebooks/direct_moment_fit_testing/: moment_testing.ipynb
analysis/scripts/: collect_bootstrap_fits.py  collect_csv.py  combine_orientations.sh  convert_to_csv.py  cov_matrix_to_csv.C  extract_fit_results.cc  fitsToCsv.C  get_bin_averages.C  get_bin_data.C  glueXstyle.C  organize_mass_bins.sh  plot_prod_angle.C  project_moments.py  pwa_plotter.mplstyle  pwa_tools.py  utils.py
analysis/small-mass-range-study/: README.md
config/: setup_gluex.csh  setup_gluex.sh  setup_gpu_gluex.sh  version.xml  version_gpu.xml
docs/: api.rst  conf.py  index.rst  scripts.rst
docs/_templates/autosummary/: class.rst  module.rst
examples/: single_bin_example.YAML
include/: AmplitudeParser.h  amp_utils.h  file_utils.h
include/neutralb1/: AmplitudeParser.h  fit_utils.h
notebooks/: .gitattributes
notebooks/cross-section/: plot_theory.py
notebooks/data-fits/spin-1/: constrained.ipynb  constrained_.ipynb  constrained_ratio.ipynb  dsnegative.ipynb  final.ipynb  fsroot_check.ipynb  orthogonality_check.ipynb  thin_unconstrained.ipynb  unconstrained.ipynb
notebooks/data-fits/spin-3/: results.ipynb
notebooks/input-output-tests/: README.md  accepted_moments.ipynb  fsroot_thin_bin.ipynb  pos-refl.ipynb  verify_moment.ipynb
notebooks/input-output-tests/0m_1m_1p/: accept_check.ipynb  accept_noaccidental_check.ipynb  thrown_check.ipynb
notebooks/input-output-tests/moment-projection/: moment_projection.ipynb
notebooks/input-output-tests/moment-verification/: amplitudes.cfg  beam.cfg  moments.cfg  run.sh  verify_moment.ipynb
notebooks/input-output-tests/spin-1/: standard_results.ipynb  t_bin_comparison.ipynb
notebooks/input-output-tests/spin-3/: spin3.ipynb
notebooks/other/: PCA_testing.ipynb  argand_plotter.ipynb
notebooks/small-mass-range/: compare_ds_constraint.ipynb  compare_orientations.ipynb  compare_ppi0-cut.ipynb  mass-dependent_plot.ipynb
scripts/: __init__.py  collect_all_fits.bash  collect_csv.py  plot_systematics.py  run_analysis.py
selector/: README.md  create_skim_trees.C  plot_omegapi0.C
src/batch/: README.md  convert_to_csv.py  extract_corr_matrix.cc  extract_cov_matrix.cc  extract_fit_results.cc  project_moments.cc  project_moments.py  run_fit.sh
src/neutralb1/: neutralb1.mplstyle  utils.py
src/neutralb1/analysis/: collect_csv.py  physics.py  plotting.py  preprocessing.py  pwa_tools.py  result.py  statistics.py
src/neutralb1/analysis/plotting/: base_plotter.py  bootstrap_plotter.py  diagnostic_plotter.py  factory_plotter.py  intensity_plotter.py  phase_plotter.py  randomized_plotter.py
src/neutralb1/batch/: README.md  amptools_config_writer.py  config_manager.py  config_models.py  convert_to_csv.py  data_manager.py  job_submitter.py  moment_config_writer.py  project_moments.py  run_fit.bash  run_fit.sh  submission_manager.py  submit.py  submit_cli.py  truth_ver03.1.cfg  write_config.py
src/neutralb1_cpp/batch/: angle_plotter.cc  check_systematic.cc  copy_tree_with_cuts.cc  extract_bin_info.cc  extract_fit_results.cc  project_moments.cc  tex_moments.cc
src/neutralb1_cpp/selection/: DSelector_omegapi_all.C  DSelector_omegapi_all.h  README.md  compare_sideband_methods.cc  finalize_amptools_trees.cc  find_t_bin_stats.cc  friend_reorder.cc  fsroot_setup.cc  integrate_voigt.cc  load_broad_branch_cuts.cc  load_broad_cuts.cc  load_friend_cuts.cc  mass_resolution.cc  omega_fits.cc  plot_accidentals.cc  plot_broad_cuts.cc  plot_combos.cc  plot_cuts.cc  plot_final_distributions.cc  relabel_gen_phasespace.cc  report_integrals.cc  runSelector.C  sideband_variation.cc  skim_best_chi2.cc  skim_for_van_hove.cc  t_resolution.cc  van_hove_analysis.cc  visualize_2d.cc
src/neutralb1_cpp/selection/DSelector/: DSelector_omegapi_all.h  runSelector.C
src/neutralb1_cpp/selection/misc/: fit_t_distribution.cc  generate_t_with_acceptance.cc  mass_resolution.cc  mass_spectrum.cc  omega_resolution.cc  pion_combos.cc  plot_dalitz_xy.cc  t_efficiency.cc  t_resolution.cc
src/neutralb1_cpp/selection/sideband-studies/: compare_sideband_methods.cc  omega_fits.cc  sideband_variation.cc
src/neutralb1_cpp/utils/: AmplitudeParser.cc  file_utils.cc  fit_utils.cc
src/selection/: DSelector_omegapi_all.C
src/utils/: AmplitudeParser.cc  amp_utils.cc  file_utils.cc  utils.py
submission/: README.md
submission/batch_scripts/: angle_plotter  angle_plotter.C  angle_plotter.cc  convert_to_csv.py  copy_tree_with_cuts.C  extract_bin_info  extract_bin_info.cc  extract_corr_matrix  extract_corr_matrix.cc  extract_cov_matrix  extract_cov_matrix.cc  extract_fit_results  extract_fit_results.cc  organize_mass_bins.sh  overwrite_template.py  plot_plotter.C  project_moments.py  pseudo-truth_ver03.1.cfg  rand_fit_diagnostic.C  run_fit.sh  setup_gluex.csh  setup_gluex.sh  submit.py  template.cfg  truth_init_ver03.1.cfg  truth_ver03.1.cfg  version.xml  write_config.py  write_config_loop.py
submission/load_monte_carlo/: DSelector_omegapi_all.C  DSelector_omegapi_all.h  runSelector.C  run_mc.py
