[project]
name = "neutralb1"
version = "0.1.0"
description = "A Partial Wave Analysis of the neutral omega pi0 channel"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipython>=9.4.0",
    "joypy>=0.2.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.3",
    "pandas>=2.3.1",
    "pyyaml>=6.0.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "uncertainties>=3.2.3",
    "Wand>=0.6.13",
]

[project.scripts]
submit = "neutralb1.batch.submit_cli:main"
convert_to_csv = "neutralb1.batch.convert_to_csv:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "isort>=5.12.0",
    "nbqa>=1.7.0",
    "nb-clean>=4.0.1",
    "sphinx>=8.2.3",
    "pydata-sphinx-theme>=0.16.1"
]

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Specify the source directory for Python packages
wheel.packages = ["src/neutralb1"]
# Configure build directory
build-dir = "build/python"
# Configure CMake
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]
cmake.define = {}
# Enable C++ compilation
wheel.py-api = "py3"